--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,8 @@
               <encoding>UTF-8</encoding>
               <sourceDirectories>${basedir}</sourceDirectories>
               <includes>**/*</includes>
-              <excludes>**/.git/**/*,**/.idea/**/*,**/target/**/,**/.flattened-pom.xml,**/*.class,Jenkinsfile</excludes>
+<!--               <excludes>**/.git/**/*,**/.idea/**/*,**/target/**/,**/.flattened-pom.xml,**/*.class,Jenkinsfile</excludes> -->
+                  <excludes>**/.git/**/*,**/.idea/**/*,**/target/**/,**/.flattened-pom.xml,**/*.class </excludes>
             </configuration>
             <goals>
               <goal>check</goal>
